# go-server/api/oas_response_encoders_gen.go
@@ -197,6 +197,20 @@ func encodeGetV1GymsResponse(response []Gym, w http.ResponseWriter, span trace.S
 	return nil
 }
 
+func encodeGetV1StudyResponse(response *StudyData, w http.ResponseWriter, span trace.Span) error {
+	w.Header().Set("Content-Type", "application/json; charset=utf-8")
+	w.WriteHeader(200)
+	span.SetStatus(codes.Ok, http.StatusText(200))
+
+	e := new(jx.Encoder)
+	response.Encode(e)
+	if _, err := e.WriteTo(w); err != nil {
+		return errors.Wrap(err, "write")
+	}
+
+	return nil
+}
+
 func encodeGetV1TransitRoutesResponse(response []BusRoute, w http.ResponseWriter, span trace.Span) error {
 	w.Header().Set("Content-Type", "application/json; charset=utf-8")
 	w.WriteHeader(200)
