# go-server/schools/cornell/handler.go
@@ -2,6 +2,7 @@ package cornell
 
 import (
 	"context"
+	"fmt"
 
 	alerts "github.com/benkoppe/bear-trak-backend/go-server/alerts/cornell"
 	"github.com/benkoppe/bear-trak-backend/go-server/api"
@@ -54,6 +55,10 @@ func (h *Handler) GetV1TransitRoutes(ctx context.Context) ([]api.BusRoute, error
 
 func (h *Handler) GetV1TransitVehicles(ctx context.Context) ([]api.Vehicle, error) {
 	return transit.GetVehicles(h.transitCaches)
+}
+
+func (h *Handler) GetV1Study(ctx context.Context) (*api.StudyData, error) {
+	return nil, fmt.Errorf("not implemented")
 }
 
 func (h *Handler) GetV1DiningUser(ctx context.Context, params api.GetV1DiningUserParams) (api.GetV1DiningUserRes, error) {
