# go-server/schools/umich/handler.go
@@ -62,6 +62,10 @@ func (h *Handler) GetV1TransitVehicles(ctx context.Context) ([]api.Vehicle, erro
 	return transit.GetVehicles(h.transitCaches)
 }
 
+func (h *Handler) GetV1Study(ctx context.Context) (*api.StudyData, error) {
+	return nil, fmt.Errorf("not implemented")
+}
+
 func (h *Handler) GetV1DiningUser(ctx context.Context, params api.GetV1DiningUserParams) (api.GetV1DiningUserRes, error) {
 	return nil, fmt.Errorf("not implemented")
 }
